# idawilli

./: .gitignore  AGENTS.md  justfile  pyproject.toml
docs/plans/: syntax-design.md  syntax-spec.md
idals/: README.md
idawilli/: __init__.py  lex_curline.py  syntax.py
idawilli/dbg/: __init__.py
plugins/bookmark_hints/: bookmark_hints.py
plugins/colorize_calls/: colorize_calls.py
plugins/dynamic_hints/: dynamic_hints.py
plugins/extensible_hints/: extensible_hints.py
plugins/global_struct_dissector/: global_struct_dissector.py  global_struct_dissector_entry.py
plugins/global_struct_dissector/tests/: conftest.py  test_dissector.py
plugins/hint_calls/: hint_calls.py
plugins/navband_visited/: navband_visited.py
plugins/oplog/: oplog.py  oplog_entry.py  oplog_events.py  oplog_hooks.py  oplog_render.py  oplog_ui.py
plugins/oplog/tests/: conftest.py  test_cmt_events.py  test_data_events.py  test_func_events.py  test_misc_events.py  test_nav_events.py  test_segm_events.py  test_type_events.py
plugins/plugin-manager/3p-plugins/: migrate_plugins.py
plugins/plugin-manager/idapro_plugin_manager/: __init__.py  __main__.py  mirror.py
plugins/tag_func/: tag_func.py
scripts/: allocate_rwx_page.py  deob.py  goto_file_offset.py  goto_rva.py  ida_enum_xrefs.py  load_file_rwx.py  load_map_file.py  parse_uuid.py  resolve_ptrs.py  save_segment.py  tagged_line_sections.py  verify_idalib.py  write_file.py
scripts/add_segment/: add_segment.py
scripts/codemap/: codemap.py
scripts/color/: color.py
scripts/find_ptrs/: ida_find_ptrs.py
scripts/fix_ptr_ops/: fix_ptr_operands.py
scripts/go/: go_fixup_fptrs.py  go_fixup_global_strings.py  go_fixup_inline_strings.py
scripts/windb_symbols/: apply_windbg_symbols.py
scripts/yara_fn/: yara_fn.py
tests/: test_all.py  test_syntax.py
tools/: i64.py
(+5 files in other folders)
